docs/original_moodle/entregas/todas/2/Quiz Trabajo en Clase/SIMARRA-1151896 NEIDER JOAN 2581/2019-10-13-11-34-36.ceg/compilation.txt
Universidad.java:57: error: cannot find symbol
    for(int i=0;i<contadorDeAlumnos;i++){
                  ^
  symbol:   variable contadorDeAlumnos
  location: class Universidad
1 error
Not compiled
